1- Modularized the file, spreading the responsibilities. 2- Created infinite scroll for Trending view.

--- a/trending.html
+++ b/trending.html
@@ -29,7 +29,9 @@
 
 </body>
 
-<script src="trending.js"></script>
+<script type="module" src="api_calls.js"></script> <!-- Uncaught SyntaxError: Cannot use import statement outside a module, so we use type = "module" -->
+<script type="module" src="display_controls.js"></script>
+<script type="module" src="trending.js"></script>
 <script>
 
     function unfoldNavbar() {
