--- a/home.html
+++ b/home.html
@@ -45,7 +45,9 @@
     </div>
 </body>
 
-<script src="search.js"></script>
+<script type="module" src="api_calls.js"></script> <!-- Uncaught SyntaxError: Cannot use import statement outside a module, so we use type = "module" -->
+<script type="module" src="display_controls.js"></script>
+<script type="module" src="search.js"></script>
 <script>
 
     function unfoldNavbar(){
