1- Implemented "Scroll to the top" button in   trending menu. 2- Removed margins between gifsinside Carousel, because   it was messing up with "carousleContainer.offsetWidth",   since "offsetWidth" takes into accounts any borders and paddings.   So the the buttons offset more than 4 gifs width. 3- Pending to fill up About page. Maybe fill up with resources I used.

--- a/trending.html
+++ b/trending.html
@@ -27,6 +27,7 @@
 
 </div>
 
+<button class="button-go-top"><span class="material-icons">expand_less</span>TOP</button>
 </body>
 
 <script type="module" src="api_calls.js"></script> <!-- Uncaught SyntaxError: Cannot use import statement outside a module, so we use type = "module" -->
