1- Added short About page, but needs better   styling and more resources.

--- a/trending.html
+++ b/trending.html
@@ -14,7 +14,7 @@
 <div class="navbar" id="myNavbar">
     <a href="home.html"> HOME </a>
     <a href="trending.html"> TRENDING </a>
-    <a href=""> ABOUT </a>
+    <a href="about.html"> ABOUT </a>
     <a href="javascript:void(0);" class="icon" onclick="unfoldNavbar()">
         <i class="fa fa-bars"></i>
     </a>
