Created a message when no GIFs found. Created a function which clears the carousel before requesting new GIFS. Tuned the request on scroll for infinite scroll. Created config.js which contains API_KEY. Created .gitignore. PENDING: No GIFS message style more adaptable. Maybe explore more error Catching.

--- a/about.html
+++ b/about.html
@@ -28,6 +28,12 @@
         <li>Youtube Channels: </li>
         <li>Stackoverflow</li>
     </ul>
+
+        <h1 style="color: white; text-align: center; margin-top: 3rem;">PENDING THINGS:</h1>
+        <ul style="color: white; text-align: center; margin-top: 3rem;">
+            <li>Error handling with Catch</li>
+            <li>Config file for API_KEY</li>
+        </ul>
 </body>
 
 <script>
