--- a/about.html
+++ b/about.html
@@ -25,15 +25,9 @@
     <ul style="color: white; text-align: center; margin-top: 3rem;">
         <li>The Odin Project</li>
         <li>W3Schools</li>
-        <li>Youtube Channels: </li>
+        <li>Youtube Channels</li>
         <li>Stackoverflow</li>
     </ul>
-
-        <h1 style="color: white; text-align: center; margin-top: 3rem;">PENDING THINGS:</h1>
-        <ul style="color: white; text-align: center; margin-top: 3rem;">
-            <li>Error handling with Catch</li>
-            <li>Config file for API_KEY</li>
-        </ul>
 </body>
 
 <script>
