Changed file structure

--- a/trending.html
+++ b/trending.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Random</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Trending</title>
 </head>
 <body>
 
@@ -30,9 +30,9 @@
 <button class="button-go-top"><span class="material-icons">expand_less</span>TOP</button>
 </body>
 
-<script type="module" src="api_calls.js"></script> <!-- Uncaught SyntaxError: Cannot use import statement outside a module, so we use type = "module" -->
-<script type="module" src="display_controls.js"></script>
-<script type="module" src="trending.js"></script>
+<script type="module" src="./js/api_calls.js"></script> <!-- Uncaught SyntaxError: Cannot use import statement outside a module, so we use type = "module" -->
+<script type="module" src="./js/display_controls.js"></script>
+<script type="module" src="./js/trending.js"></script>
 <script>
 
     function unfoldNavbar() {
