--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Search</title>
 </head>
 <body>
@@ -45,9 +45,9 @@
     </div>
 </body>
 
-<script type="module" src="api_calls.js"></script> <!-- Uncaught SyntaxError: Cannot use import statement outside a module, so we use type = "module" -->
-<script type="module" src="display_controls.js"></script>
-<script type="module" src="search.js"></script>
+<script type="module" src="./js/api_calls.js"></script> <!-- Uncaught SyntaxError: Cannot use import statement outside a module, so we use type = "module" -->
+<script type="module" src="./js/display_controls.js"></script>
+<script type="module" src="./js/search.js"></script>
 <script>
 
     function unfoldNavbar(){
